<resources>
    <string name="app_name">SuperIndicator</string>

    <string name="a_name">挑战者联盟</string>
    <string name="b_name">老九门，再探古墓</string>
    <string name="c_name">红色通道，刘烨归来</string>
    <string name="d_name">神犬小七第二季</string>
    <string name="e_name">灭罪师</string>

    <string name="common_text">测试普通View轮播</string>
    <string name="net_text">测试网络普通View轮播</string>
    <string name="scroll_text">测试ScrollView轮播</string>
    <string name="enlarge_image_text">放大图片</string>
    <string name="reduce_image_text">缩小图片</string>
</resources>
